# bot2

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README-INFRA.md  README.md  TODO.md  config.ini  config.py  docker-compose.yml  generate_dot_env_dot_example.py  main.py  pyproject.toml  python-app.conf  requirements.txt  teardown.sh  test.env.example  test.txt
.github/workflows/: build.yaml  deploy.yaml  test.yaml
core/: base.py  extensions_loader.py  init_logging.py
extensions/: birthday_event.py  code_quote.py  error.py  hello_cam.py  latency.py  multiple_role_emoji_message.py  my_command.py  ping.py  roles.py  single_role_emoji_message.py  tasks.py
inactive_extensions/: hello_cam.py  multiple_role_emoji_message.py  my_command.py  my_context_menu.py  my_event.py  reset_commands.py  single_role_emoji_message.py  tasks.py
infra/: main.tf
infrastructure/: README.md  setup.sh  setup_with_mirror.sh  teardown.sh
infrastructure/infra/mig/: main.tf
infrastructure/lib/: bash_utils.sh
src/: example_config.py  main.py
src/core/: base.py  extensions_loader.py
src/core/utils/: basic_utils.py  create_scheduled_event.py
src/extensions/: birthday_event.py  code_quote.py  error.py  hello_cam.py  latency.py  meeting_scheduler.py  ping.py  roles.py  tasks.py  time_passed.py
src/inactive_extensions/: reset_commands.py  single_role_emoji_message.py
src/prototypes/: code_memory_prototype.py
